Round 2 - Move to windows service, initial commit

--- a/EKS-Windows-Bootstrapper.csproj
+++ b/EKS-Windows-Bootstrapper.csproj
@@ -14,10 +14,18 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.EC2" Version="3.7.326" />
     <PackageReference Include="AWSSDK.EKS" Version="3.7.305.19" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Install-Service.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Start-EKSBootstrap.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
